feat(envrc): update

--- a/.envrc
+++ b/.envrc
@@ -1,9 +1,12 @@
 { ! has nix_direnv_version || ! nix_direnv_version 2.2.1; } && \
   source_url "https://raw.githubusercontent.com/nix-community/nix-direnv/2.2.1/direnvrc" "sha256-zelF0vLbEl5uaqrfIzbgNzJWGmLzCmYAkInj/LNxvKs="
 
-nix_direnv_watch_file flake.nix
-nix_direnv_watch_file flake.lock
+watch_file \
+    flake.* \
+    nix/modules/*.nix
 
-DEVENV_ROOT_FILE="$(mktemp)"
-printf %s "$PWD" > "${DEVENV_ROOT_FILE}"
+DEVENV_ROOT_FILE="$(mktemp -t devenv-root-XXXXXXXX)"
+printf "%s" "${PWD}" > "${DEVENV_ROOT_FILE}"
 use flake . --override-input devenv-root "file+file://${DEVENV_ROOT_FILE}"
+
+rm "${DEVENV_ROOT_FILE}" && unset DEVENV_ROOT_FILE
