--- a/.envrc
+++ b/.envrc
@@ -5,8 +5,4 @@ watch_file \
     flake.* \
     nix/modules/*.nix
 
-DEVENV_ROOT_FILE="$(mktemp -t devenv-root-XXXXXXXX)"
-printf "%s" "${PWD}" > "${DEVENV_ROOT_FILE}"
-use flake . --override-input devenv-root "file+file://${DEVENV_ROOT_FILE}"
-
-rm "${DEVENV_ROOT_FILE}" && unset DEVENV_ROOT_FILE
+use flake .
