--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,14 +11,12 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        # FIXME: darwin won't pass chech. https://github.com/cachix/devenv/issues/1455
-        #os: [ubuntu-latest, macos-latest]
-        os: [ubuntu-latest]
+        os: [ubuntu-latest, macos-latest]
+
     steps:
       - uses: actions/checkout@v4
 
       - uses: DeterminateSystems/nix-installer-action@v16
 
       - name: Run CI
-        # impure is needed (for now) because of devenv
-        run: nix flake check --impure .
+        run: nix flake check .
