--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,5 +18,8 @@ jobs:
 
       - uses: DeterminateSystems/nix-installer-action@v16
 
+      - name: Install omnix
+        run: nix --accept-flake-config profile install "github:juspay/omnix"
+
       - name: Run CI
-        run: nix flake check .
+        run: nix --version && om ci
